--- a/Lec02_alphabetizing.ipynb
+++ b/Lec02_alphabetizing.ipynb
@@ -2,23 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Before alphabetizing:  ['SLU', 'Billiken', 'Arch', 'COVID']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# This is a Python comment. It's used to explain what the code is doing.\n",
     "\n",
     "# create our list that isn't yet alphabetized\n",
     "unalphabetized_list = ['SLU','Billiken','Arch','COVID']\n",
     "\n",
+    "# we can use print statements to see what our variables actually look like\n",
     "print('Before alphabetizing: ', unalphabetized_list)\n",
     "\n",
     "# you can either hit the \"Run\" button to run this cell\n",
@@ -27,18 +20,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "After alphabetizing:  ['Arch', 'Billiken', 'COVID', 'SLU']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Python starts \"indexing\" (or counting) at 0\n",
+    "# If you want to get the first element of the list,\n",
+    "# in Python that means you want to get the 0th element\n",
+    "\n",
+    "first_element = unalphabetized_list[0]\n",
+    "print(first_element)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# you can figure out how long the list is using len\n",
+    "num_elements = len(unalphabetized_list)\n",
+    "print(num_elements)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# What if I wanted to get the last element?\n",
+    "print(unalphabetized_list[num_elements])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# why didn't that work?\n",
+    "\n",
+    "last_element = unalphabetized_list[num_elements-1]\n",
+    "print(last_element)\n",
+    "\n",
+    "# or:\n",
+    "\n",
+    "last_element = unalphabetized_list[-1]\n",
+    "print(last_element)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# if we wanted to do something with each element in the list, we can use for loops:\n",
+    "for word in unalphabetized_list:\n",
+    "    print(word)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# we can also do \"checks\" and perform different operations based on those checks\n",
+    "for word in unalphabetized_list:\n",
+    "    if \"U\" in word or \"A\" in word:\n",
+    "        print(word)\n",
+    "    else:\n",
+    "        print('No U or A in', word)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# we can decide to just not do anything if there's no U or A in our word\n",
+    "for word in unalphabetized_list:\n",
+    "    if \"U\" in word or \"A\" in word:\n",
+    "        print(word)\n",
+    "    else:\n",
+    "        continue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# or we can stop doing anything!\n",
+    "for word in unalphabetized_list:\n",
+    "    if \"U\" in word or \"A\" in word:\n",
+    "        print(word)\n",
+    "    else:\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Those are the building blocks we need to be able to read the code for our alphabetizing algorithm!\n",
+    "\n",
     "# The following code is our alphabetizing algorithm.\n",
     "# We are going to go through this line by line in class\n",
     "\n",
@@ -63,20 +155,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['frog', 'dog', 'cat', 'bird']"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# This is the same thing but using a *function*\n",
     "\n",
@@ -103,22 +184,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'int' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-24-9d876a7d9222>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mmy_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m9\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m47\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0malphabetize_list\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmy_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-23-ced1a766fdc1>\u001b[0m in \u001b[0;36malphabetize_list\u001b[0;34m(unalphabetized_list)\u001b[0m\n\u001b[1;32m     10\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0mword2_index\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0malphabetized_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m                 \u001b[0mw2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0malphabetized_list\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mword2_index\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m                 \u001b[0;32mif\u001b[0m \u001b[0mw1\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0mw2\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m                     \u001b[0malphabetized_list\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minsert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mword2_index\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mw1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m                     \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not subscriptable"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create your own list of words and use alphabetize_list to sort them\n",
     "\n",
@@ -152,7 +220,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
