Lec04 and assignment1

--- a/assignments/Assignment1.ipynb
+++ b/assignments/Assignment1.ipynb
@@ -171,6 +171,19 @@
    "source": [
     "....replace this text with your answer .... (to edit the text in this cell, double click on it)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<H2> DON'T FORGET TO SUBMIT!</H2>\n",
+    "\n",
+    "In order to submit this assignment, go the the \"File\" button at the top of this page (right below the jupyter icon).\n",
+    "\n",
+    "Select \"Download as\" --> \"Notebook (.ipynb)\"\n",
+    "\n",
+    "Upload the .ipynb file on canvas before next Thursday at 10:59AM."
+   ]
   }
  ],
  "metadata": {
